--- a/miniprogram/components/code-type/code-type.wxml
+++ b/miniprogram/components/code-type/code-type.wxml
@@ -1,1 +1,7 @@
-<text></text>
+<view>
+  <pre>
+    <code>
+      <rich-text nodes="{{highlightedCode}}"></rich-text>
+    </code>
+  </pre>
+</view>
