--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,8 @@
-<view>
-  <code-type />
+<view class="main-wrapper">
+  <view class="operate-bar">
+    <view class="operate-btn close"></view>
+    <view class="operate-btn min"></view>
+    <view class="operate-btn max"></view>
+  </view>
+  <code-type class="code-type" />
 </view>
