--- a/miniprogram/components/code-type/code-type.wxss
+++ b/miniprogram/components/code-type/code-type.wxss
@@ -1,3 +1,20 @@
+.main-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.login-time {
+  margin-bottom: 15rpx;
+}
+
+.code-wrapper {
+  flex: 1;
+  padding: 15rpx 0;
+  overflow-y: auto;
+}
+
 /**
  * okaidia theme for JavaScript, CSS and HTML
  * Loosely based on Monokai textmate theme by http://www.monokai.nl/
