--- a/miniprogram/components/code-type/code-type.wxss
+++ b/miniprogram/components/code-type/code-type.wxss
@@ -6,13 +6,14 @@
 }
 
 .login-time {
-  margin-bottom: 15rpx;
+  margin-bottom: 15px;
 }
 
 .code-wrapper {
   flex: 1;
-  padding: 15rpx 0;
+  padding: 0 0 15px 0;
   overflow-y: auto;
+  line-height: 1.8;
 }
 
 /**
