--- a/miniprogram/components/code-type/code-type.wxml
+++ b/miniprogram/components/code-type/code-type.wxml
@@ -1,7 +1,8 @@
 <view class="main-wrapper">
   <!-- TODO:日期 转移到 terminal 里 -->
   <!-- <view class="login-time">Last login: {{ startDate }} on ttys001</view> -->
-  <view class="code-wrapper">
+  <scroll-view class="code-wrapper" scroll-y="true" scroll-into-view="{{bottomEle}}" scroll-with-animation="true">
     <rich-text nodes="{{highlightedCode}}"></rich-text>
-  </view>
+    <view id="bottomAnchor" style="height: 0;"></view>
+  </scroll-view>
 </view>
