--- a/miniprogram/components/code-type/code-type.wxss
+++ b/miniprogram/components/code-type/code-type.wxss
@@ -1,7 +1,5 @@
 .main-wrapper {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
 }
 
@@ -10,10 +8,9 @@
 }
 
 .code-wrapper {
-  flex: 1;
-  padding: 0 0 15px 0;
-  overflow-y: auto;
+  height: 100%;
   line-height: 1.8;
+  -webkit-overflow-scrolling: touch;
 }
 
 /**
