feat: loading 效果完成

--- a/miniprogram/components/loading/loading.wxml
+++ b/miniprogram/components/loading/loading.wxml
@@ -1,6 +1,9 @@
 <view class="main-wrapper">
-  {{currVal}} / {{currTime}}
   <view class="loading-wrapper">
-    {{currLoadingTxt.value}}
+    <view class="container">
+      <view class="prompt">loading</view>
+      <view class="text">{{currLoadingTxt.value}}</view>
+      <view class="bar" style="width:{{currVal}}%"></view>
+    </view>
   </view>
 </view>
