feat: 增加 eventEmitter class

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -11,8 +11,8 @@
   <code-type wx:if="{{showIndex}}" class="code-type" />
 
   <!-- loading -->
-  <!-- <loading wx:if="{{!showIndex}}" bindcustomevent="showIndex"></loading> -->
+  <loading wx:if="{{!showIndex}}"></loading>
 
   <!-- terminal -->
-  <terminal bindcustomevent="codeStart" />
+  <terminal wx:if="{{showIndex}}" />
 </view>
