--- a/miniprogram/style/prism-okaidia.wxss
+++ b/miniprogram/style/prism-okaidia.wxss
@@ -4,8 +4,8 @@
  * @author ocodia
  */
 
-.wxParse-code[class*="language-"],
-pre[class*="language-"] {
+code,
+pre {
 	color: #f8f8f2;
 	background: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
@@ -29,23 +29,11 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
 	border-radius: 0.3em;
-}
-
-:not(pre) > .wxParse-code[class*="language-"],
-pre[class*="language-"] {
-	background: #272822;
-}
-
-/* Inline code */
-:not(pre) > .wxParse-code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
-	white-space: normal;
 }
 
 .token.comment,
