--- a/miniprogram/components/terminal/terminal.wxss
+++ b/miniprogram/components/terminal/terminal.wxss
@@ -24,12 +24,17 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  bottom: 0;
+  bottom: -100%;
   height: 65%;
   width: 100%;
   border-top: 1px solid rgb(65, 65, 65);
   background-color: rgb(37, 37, 38);
-  transition: height .8s ease-in-out;
+  transition: bottom .8s ease-in-out,
+              height .4s ease;
+}
+
+.terminal-wrapper.show {
+  bottom: 0;
 }
 
 .terminal-wrapper.extand {
@@ -91,11 +96,12 @@
 }
 
 .right-area .iconzhankai {
-  transition: all .8s ease-in-out;
+  transform: rotateZ(180deg);
+  transition: all .4s ease;
 }
 
 .right-area .iconzhankai.extand {
-  transform: rotateZ(180deg);
+  transform: rotateZ(0);
 }
 
 .terminal-content {
@@ -120,7 +126,8 @@
 
 .cmd-input-wrapper .cmd-input {
   flex-grow: 1;
-  padding: 16rpx 0 16rpx 10px;
+  height: 80rpx;
+  padding: 0 5px;
   color: rgb(28, 28, 28);
 }
 
@@ -136,7 +143,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 0;
+  height: 80rpx;
   text-align: center;
   color: rgb(28, 28, 28);
   background-color: rgb(248, 248, 248);
