--- a/miniprogram/components/terminal/terminal.wxml
+++ b/miniprogram/components/terminal/terminal.wxml
@@ -9,7 +9,23 @@
       </view>
     </view>
     <scroll-view class="terminal-content" scroll-y="true">
-      <view class="login-date">Last login: {{terminalObj.initDate}} on ttys001</view>
+      <view class="login-date">{{terminalObj.initDate}}</view>
+      <view class="cmds-wrapper" wx:for="{{terminalObj.history}}" wx:key="stamp">
+        <view class="cmd">
+          <view class="user-info">{{terminalObj.userInfo}}</view>
+          <view class="cmd-content">{{item.cmd}}</view>
+        </view>
+        <view class="rst" wx:if="{{item.rst}}">
+          <view wx:if="{{item.rst.type === 'step'}}">
+            <view class="step" wx:for="{{stepCmd}}" wx:key="label">
+              <view class="step-item time">{{item.time}}</view>
+              <view class="step-item label">{{item.label}}</view>
+              <view class="step-item duration">{{item.duration}} ms</view>
+            </view>
+          </view>
+          <view wx:else></view>
+        </view>
+      </view>
     </scroll-view>
     <view class="input-area">
       <!-- 命令输入 -->
@@ -25,3 +41,5 @@
     </view>
   </view>
 </view>
+
+<button wx:if="{{!show}}" class="terminal-switch" type="primary" size="mini" bindtap="hideTerminal">控制台</button>
