--- a/miniprogram/components/invitation/invitation.wxss
+++ b/miniprogram/components/invitation/invitation.wxss
@@ -8,13 +8,14 @@
   padding: 30px 20px;
   transform: scale(0.05);
   opacity: 0;
-  transition: transform 0.8s cubic-bezier(.26,1.84,.39,.61), opacity 0.5s linear;
+  transition: transform 0.8s cubic-bezier(0.26, 1.84, 0.39, 0.61),
+    opacity 0.5s linear;
   background-size: 100%;
   overflow: hidden;
   box-sizing: border-box;
 }
 
-.wedding-invitation.invitation-bounce{
+.wedding-invitation.invitation-bounce {
   opacity: 1;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -37,7 +38,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #D65047;
+  background-color: #d65047;
   border-radius: 10px;
   perspective: 500px;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.15);
@@ -55,14 +56,14 @@
 }
 
 .invitation-cover .cover-content.invitation-up {
-  transform: translateY(-60px);
+  transform: translateY(-40px);
 }
 
 .cover-content .content-inside {
   height: 100%;
   padding: 20px;
   color: #a9895d;
-  background-color: #FFF1DE;
+  background-color: #fff1de;
   text-align: center;
   overflow: auto;
   box-sizing: border-box;
@@ -75,15 +76,15 @@
   width: 70%;
   height: 100%;
   border-radius: 10px;
-  background-color: #D65047;
-  box-shadow: 5px 0 10px rgba(0,0,0,0.2);
+  background-color: #d65047;
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
   z-index: 6;
   transition: transform 0.5s;
   transform-origin: 0 50%;
 }
 
 .cover-inside-left.opening {
-  transform: rotate3d(0,1,0,-140deg);
+  transform: rotate3d(0, 1, 0, -140deg);
 }
 
 .cover-inside-right {
@@ -93,15 +94,15 @@
   width: 40%;
   height: 100%;
   border-radius: 10px;
-  background-color: #D65047;
-  box-shadow: -5px 0 10px rgba(0,0,0,0.2);
+  background-color: #d65047;
+  box-shadow: -5px 0 10px rgba(0, 0, 0, 0.2);
   z-index: 5;
   transition: transform 0.5s;
   transform-origin: 100% 50%;
 }
 
 .cover-inside-right.opening {
-  transform: rotate3d(0,1,0,140deg);
+  transform: rotate3d(0, 1, 0, 140deg);
 }
 
 .cover-inside-seal {
@@ -119,12 +120,3 @@
 .cover-inside-seal.invitation-flight {
   opacity: 0;
 }
-
-
-
-
-
-
-
-
-
