--- a/miniprogram/components/terminal/terminal.wxss
+++ b/miniprogram/components/terminal/terminal.wxss
@@ -108,6 +108,7 @@
 
 .terminal-content {
   flex: 1;
+  padding-bottom: 10px;
   font-size: 32rpx;
   overflow-y: auto;
 }
@@ -196,6 +197,7 @@
   color: rgb(28, 28, 28);
   border-left: 1px solid rgb(223, 223, 223);
   background-color: rgb(248, 248, 248);
+  font-weight: normal;
 }
 
 .input-area .btn-wrapper {
