feat: 控制台自动滚动功能完成

--- a/miniprogram/components/code-type/code-type.wxml
+++ b/miniprogram/components/code-type/code-type.wxml
@@ -1,5 +1,5 @@
 <view class="main-wrapper">
-  <scroll-view id="scroll-view" class="code-wrapper" scroll-x="true" scroll-y="true" scroll-top="{{codeContentScrollTop}}" scroll-with-animation="true">
+  <scroll-view id="scroll-view" class="code-wrapper" scroll-x="true" scroll-y="true" scroll-top="{{codeContentScrollTop}}" scroll-with-animation="{{true}}">
     <rich-text id="code-content" nodes="{{highlightedCode}}"></rich-text>
   </scroll-view>
 </view>
