--- a/miniprogram/components/terminal/terminal.wxss
+++ b/miniprogram/components/terminal/terminal.wxss
@@ -23,8 +23,6 @@
 }
 
 .terminal-wrapper {
-  display: flex;
-  flex-direction: column;
   position: fixed;
   bottom: -100%;
   height: 65%;
@@ -44,10 +42,7 @@
 }
 
 .content-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex: 1;
+  height: 100%;
   padding: 0 10px;
   overflow: hidden;
 }
@@ -107,10 +102,11 @@
 }
 
 .terminal-content {
-  flex: 1;
+  height: calc(100% - 135px);
   padding-bottom: 10px;
   font-size: 32rpx;
-  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  box-sizing: border-box;
 }
 
 .terminal-content .login-date {
@@ -186,13 +182,13 @@
 
 .cmd-input-wrapper .cmd-input {
   flex-grow: 1;
-  height: 80rpx;
+  height: 43px;
   padding: 0 5px;
   color: rgb(28, 28, 28);
 }
 
 .cmd-input-wrapper .btn {
-  flex-basis: 15%;
+  flex-basis: 17%;
   text-align: center;
   color: rgb(28, 28, 28);
   border-left: 1px solid rgb(223, 223, 223);
@@ -204,7 +200,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 80rpx;
+  height: 45px;
   text-align: center;
   color: rgb(28, 28, 28);
   background-color: rgb(248, 248, 248);
