--- a/miniprogram/components/terminal/terminal.wxml
+++ b/miniprogram/components/terminal/terminal.wxml
@@ -19,10 +19,12 @@
           </view>
           <view class="rst" wx:if="{{item.rst}}">
             <view wx:if="{{item.rst.type === 'stepDebugging'}}">
-              <view class="step" wx:for="{{item.rst.stepCmdOutput}}" wx:key="label">
-                <view class="step-item time">{{item.time}}</view>
-                <view class="step-item label">{{item.label}}</view>
-                <view class="step-item duration">{{item.duration}} ms</view>
+              <view class="step" wx:for="{{item.rst.steps}}" wx:key="stepStamp">
+                <view class="step-item-wrapper" wx:if="{{item.isExed}}">
+                  <view class="step-item time">{{item.time}}</view>
+                  <view class="step-item label">{{item.label}}</view>
+                  <view class="step-item duration">{{item.duration}} ms</view>
+                </view>
               </view>
             </view>
             <!-- 没有相应的指令 -->
