--- a/miniprogram/components/invitation/invitation.wxss
+++ b/miniprogram/components/invitation/invitation.wxss
@@ -50,7 +50,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 10px 20px;
+  padding: 10px;
   transition: transform 0.6s cubic-bezier(0.4, 0, 1, 1);
   box-sizing: border-box;
 }
@@ -60,13 +60,62 @@
 }
 
 .cover-content .content-inside {
+  display:flex;
+  flex-direction: column;
+	align-items: stretch;
   height: 100%;
-  padding: 20px;
   color: #a9895d;
-  background-color: #fff1de;
+  background: #fffcf6;
   text-align: center;
   overflow: auto;
   box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 3px 8px rgba(69,18,10,.4);
+}
+
+.cover-content .content-inside .content-border {
+  flex: 1;
+  display:flex;
+  flex-direction: column;
+	align-items: stretch;
+  border: 2px solid #e9e5d9;
+  padding: 2px;
+  margin: 15px;
+  position: relative;
+}
+
+.content-inside .content-border .corner {
+  width: 2px;
+  height: 2px;
+  border: 2px solid #e9e5d9;
+  position: absolute;
+}
+
+.content-border .corner.corner-top-left {
+  top: -6px;
+  left: -6px;
+}
+
+.content-border .corner.corner-top-right {
+  top: -6px;
+  right: -6px;
+}
+
+.content-border .corner.corner-bottom-left {
+  bottom: -6px;
+  left: -6px;
+}
+
+.content-border .corner.corner-bottom-right {
+  bottom: -6px;
+  right: -6px;
+}
+
+.content-inside .content-border .content-container {
+  flex: 1;
+  border: 2px solid #e9e5d9;
+  position: relative;
+  padding: 10px;
 }
 
 .cover-inside-left {
