--- a/miniprogram/components/invitation/invitation.wxss
+++ b/miniprogram/components/invitation/invitation.wxss
@@ -18,7 +18,6 @@
 .wedding-invitation.invitation-bounce {
   opacity: 1;
   transform: scale(1);
-  -webkit-transform: scale(1);
 }
 
 .invitation-container {
@@ -116,6 +115,27 @@
   border: 2px solid #e9e5d9;
   position: relative;
   padding: 10px;
+  color: #645647;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.content-container .content-img {
+  border-radius: 3px;
+  border: 1px solid #fff;
+  margin-top: 3px;
+  margin-bottom: 15px;
+  background: #fff;
+  box-shadow: 0 1px 3px rgba(0,0,0,.1);
+}
+
+.content-container .content-inside-photo {
+  width: 100%;
+}
+
+.content-container .phrase {
+  padding-bottom: 10px;
 }
 
 .cover-inside-left {
