--- a/miniprogram/components/invitation/invitation.wxml
+++ b/miniprogram/components/invitation/invitation.wxml
@@ -12,7 +12,7 @@
               <image class="content-img content-inside-photo" src="../../images/photo.jpeg" />
               <view class="phrase">范默苒 & 雷佳良</view>
               <view class="phrase">{{date}}</view>
-              <view class="phrase">华林国际好运来酒店 - xxx 主题厅</view>
+              <view class="phrase" bind:tap="navToMapPage">华林国际好运来酒店 - xxx 主题厅</view>
             </view>
           </view>
         </view>
