feat: 修复控制台显示隐藏问题

--- a/miniprogram/components/loading/loading.wxml
+++ b/miniprogram/components/loading/loading.wxml
@@ -5,5 +5,6 @@
       <view class="text">{{currLoadingTxt.value}}</view>
       <view class="bar" style="width:{{currVal}}%"></view>
     </view>
+    <!-- <rich-text nodes="{{domStr}}"></rich-text> -->
   </view>
 </view>
