--- a/miniprogram/components/terminal/terminal.wxml
+++ b/miniprogram/components/terminal/terminal.wxml
@@ -48,4 +48,4 @@
   </view>
 </view>
 
-<button wx:if="{{!show}}" class="terminal-switch" type="primary" size="mini" bindtap="hideTerminal">控制台</button>
+<button wx:if="{{showTerminalSwitch}}" class="terminal-switch" type="primary" size="mini" bindtap="hideTerminal">控制台</button>
