--- a/miniprogram/components/invitation/invitation.wxml
+++ b/miniprogram/components/invitation/invitation.wxml
@@ -10,9 +10,17 @@
             <view class="corner corner-bottom-right"></view>
             <view class="content-container">
               <image class="content-img content-inside-photo" src="../../images/photo.jpeg" />
-              <view class="phrase">范默苒 & 雷佳良</view>
-              <view class="phrase">{{date}}</view>
-              <view class="phrase" bind:tap="navToMapPage">华林国际好运来酒店 - xxx 主题厅</view>
+              <view class="content-info">
+                <view class="content-info-flex">
+                  <view class="phrase">范默苒 & 雷佳良</view>
+                  <view class="phrase">{{date}}</view>
+                  <view class="phrase" bind:tap="navToMapPage">
+                    <text class="block-text">好运来（华林国际）</text>
+                    <text class="block-text">xxx 主题厅</text>
+                  </view>
+                </view>
+              </view>
+              <view class="wish-btn-wrapper"><image class="btn-icon" src="../../images/flower.png" /></view>
             </view>
           </view>
         </view>
