feat: 增加 send loading 遮罩，盖住原生组件的输入内容

--- a/miniprogram/components/barrage-sender/barrage-sender.wxml
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxml
@@ -23,7 +23,12 @@
             <button class="submit-btn" catch:tap="send">发送</button>
           </view>
         </view>
-        <view wx:else></view>
+        <view wx:else class="letter-send-loading">
+          <view class="loc-wrapper">
+            <view class="loading-img"></view>
+            <view class="loading-p">祝福打包中</view>
+          </view>
+        </view>
       </view>
       <view class="flap left-flap"></view>
       <view class="flap right-flap"></view>
