--- a/miniprogram/components/barrage-sender/animations.wxss
+++ b/miniprogram/components/barrage-sender/animations.wxss
@@ -1,3 +1,4 @@
+/* letter */
 @keyframes new {
   0% {
     left: 0%;
@@ -95,5 +96,34 @@
   100% {
     transform: translate3d(0, 0, 0);
     box-shadow: inset 0 0px 30px -5px #b08c5b, 0 0 10px -5px;
+  }
+}
+
+/* loading */
+@keyframes animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+  25% {
+    transform: translateY(9px) rotate(22.5deg);
+  }
+  50% {
+    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 40px;
+  }
+  75% {
+    transform: translateY(9px) rotate(67.5deg);
+  }
+  100% {
+    transform: translateY(0) rotate(90deg);
+  }
+}
+@keyframes shadow {
+  0%,
+  100% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.2, 1);
   }
 }
