--- a/miniprogram/style/fontface.wxss
+++ b/miniprogram/style/fontface.wxss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1686708 */
-  src: url('//at.alicdn.com/t/font_1686708_degfqkpjg78.eot');
-  src: url('//at.alicdn.com/t/font_1686708_degfqkpjg78.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1686708_degfqkpjg78.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1686708_degfqkpjg78.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1686708_degfqkpjg78.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1686708_degfqkpjg78.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.eot');
+  src: url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1686708_jagjid2vw1s.svg#iconfont') format('svg');
 }
 
 .iconfont {
@@ -26,4 +26,8 @@
 
 .iconenvelope:before {
   content: "\e631";
+}
+
+.iconfeather::before {
+  content: "\e636";
 }
