--- a/miniprogram/components/barrage-sender/barrage-sender.wxml
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxml
@@ -38,7 +38,7 @@
   </view>
   <view class="one-more-wrapper">
     <view class="one-more-container">
-      <view class="icon iconfont iconfeather" catch:tap="oneMore"></view>
+      <view class="icon iconfont iconfeather {{showOneMore}}" catch:tap="oneMore"></view>
     </view>
   </view>
 </view>
