feat: 弹幕页整体配色调整

--- a/miniprogram/components/barrage-sender/animations.wxss
+++ b/miniprogram/components/barrage-sender/animations.wxss
@@ -137,14 +137,14 @@
 
   100% {
     opacity: 1;
-    box-shadow:2px 2px 17px #07689f;
+    box-shadow:2px 2px 17px rgb(63, 63, 63);
   }
 }
 
 @keyframes oneMoreBtnShadowHide {
   0% {
     opacity: 1;
-    box-shadow:2px 2px 17px #07689f;
+    box-shadow:2px 2px 17px rgb(63, 63, 63);
   }
 
   100% {
