--- a/miniprogram/components/barrage-sender/barrage-sender.wxss
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxss
@@ -257,7 +257,7 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #45D5D5;
+  background-color: #79a8a9;
   animation: animate 0.5s linear infinite;
   border-radius: 3px;
 }
@@ -304,10 +304,10 @@
 
 .one-more-container .iconfeather {
   font-size: 300rpx;
-  color: #cbf1f5;
+  color: #fff;
   border-radius: 15px;
   opacity: 0;
-  background-color: #07689f;
+  background-color: #aacfd0;
 }
 
 .one-more-container .iconfeather.show {
