feat: 信封正面增加副标题

--- a/miniprogram/components/barrage-sender/barrage-sender.wxml
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxml
@@ -5,6 +5,7 @@
       <view class="stamp"></view>
       <view class="mailme">
         <view class="title">期待你的祝福</view>
+        <view class="subtitle">点击填写</view>
       </view>
     </view>
     <view class="back">
