--- a/miniprogram/components/barrage-sender/barrage-sender.wxss
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxss
@@ -63,13 +63,11 @@
   background-position: -10px -10px;
 }
 
-.envelope .front .stamp:after {
-  content: "";
-  display: block;
+.envelope .front .stamp .avatar-default {
   width: 100%;
   height: 100%;
   background-color: #f2f2cf;
-  border-radius: 2px;
+  background-size: cover;
 }
 
 .envelope .front .mailme {
@@ -84,12 +82,6 @@
   line-height: 70rpx;
   font-weight: bold;
   margin-top: 35px;
-}
-
-.envelope .front .mailme .subtitle {
-  font-size: 40rpx;
-  line-height: 40rpx;
-  margin-top: 5px;
 }
 
 .envelope .back {
