refactor(barrage-sender.wxml): 修改文案

--- a/miniprogram/components/barrage-sender/barrage-sender.wxml
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxml
@@ -9,7 +9,7 @@
           default-avatar="{{defaultAvatar}}"></open-data>
       </view>
       <view class="mailme" bind:tap="openEnvelope">
-        <view class="title">点击填写</view>
+        <view class="title">点击送祝福</view>
       </view>
     </view>
     <view class="back">
