--- a/miniprogram/components/invitation/invitation.wxml
+++ b/miniprogram/components/invitation/invitation.wxml
@@ -20,7 +20,14 @@
                   </view>
                 </view>
               </view>
-              <view class="wish-btn-wrapper" bind:tap="navToBarragePage"><image class="btn-icon" src="../../images/flower.png" /></view>
+              <!-- 需要使用 button 来授权登录 -->
+              <button 
+                wx:if="{{canIUse}}"
+                class="wish-btn-wrapper" 
+                open-type="getUserInfo" 
+                bindgetuserinfo="bindGetUserInfo"><image class="btn-icon" src="../../images/flower.png" /></button>
+              <view wx:else>请升级微信版本后发送祝福</view>
+              <!-- <view class="wish-btn-wrapper" bind:tap="navToBarragePage"><image class="btn-icon" src="../../images/flower.png" /></view> -->
             </view>
           </view>
         </view>
