feat: 数据库存储弹幕功能完成

--- a/miniprogram/components/barrage-sender/barrage-sender.wxml
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxml
@@ -36,7 +36,8 @@
           <view class="form-item">
             <button 
                 class="submit-btn"
-                disabled="{{wishContent === ''}}" 
+                disabled="{{wishContent === ''}}"
+                loading="{{sendBtnLoading}}"
                 catch:tap="send">发送</button>
           </view>
         </view>
