feat: 初始化弹幕组件失败

--- a/miniprogram/pages/barrage/barrage.wxml
+++ b/miniprogram/pages/barrage/barrage.wxml
@@ -1,2 +1,4 @@
-<view class="barrage-container"></view>
+<view class="barrage-container">
+    <barrage class="barrage"></barrage>
+</view>
 <barrage-sender />
