feat: 可以发弹幕了

--- a/miniprogram/components/invitation/invitation.wxss
+++ b/miniprogram/components/invitation/invitation.wxss
@@ -171,6 +171,7 @@
 .content-container .wish-btn-wrapper {
   text-align: center;
   font-size: 0;
+  background-color: transparent;
 }
 
 .content-container .wish-btn-wrapper .btn-icon {
