--- a/miniprogram/pages/barrage/barrage.wxml
+++ b/miniprogram/pages/barrage/barrage.wxml
@@ -1,4 +1,4 @@
 <view class="barrage-container">
     <barrage class="barrage"></barrage>
 </view>
-<barrage-sender />
+<barrage-sender bind:sendBarrage="onSendBarrage" />
