--- a/miniprogram/pages/barrage/barrage.wxss
+++ b/miniprogram/pages/barrage/barrage.wxss
@@ -3,7 +3,15 @@ page {
 }
 
 .barrage-container {
-  height: 35%;
-  border: 1px solid #000000;
+  z-index: 4;
+  position: relative;
+  height: 50%;
+}
+
+.barrage-sender-container {
+  z-index: 5;
+  position: relative;
+  height: 50%;
+  background-color: #fff;
 }
 
